--- a/src/app/vista-catalogos/vista-catalogos.component.html
+++ b/src/app/vista-catalogos/vista-catalogos.component.html
@@ -1,4 +1,4 @@
 <div class="ad-banner-example">
     <h3>Advertisements</h3>
-    <ng-template ad-host></ng-template>
+    <ng-template catalogo-host></ng-template>
   </div>
