Integración grilla y caraga dinámica de planes y equipos

--- a/src/app/modules/ventas-vistas/catalogo-equipos/vista-catalogo-equipos/equipos.component.html
+++ b/src/app/modules/ventas-vistas/catalogo-equipos/vista-catalogo-equipos/equipos.component.html
@@ -2,7 +2,7 @@
     <h1>Equipos</h1>
 
     <h3>La grilla debería mostrar los equipos</h3>
-
+    <app-grilla [itemIndex]="1"></app-grilla>
     <p>Acá se muestran los items que traen los equipos</p>
     <ul>
       <li></li>
