--- a/src/app/modules/ventas-vistas/catalogo-planes/vista-catalogo-planes/planes.component.html
+++ b/src/app/modules/ventas-vistas/catalogo-planes/vista-catalogo-planes/planes.component.html
@@ -2,7 +2,8 @@
   <h1>Planes</h1>
 
     <h3>La grilla debería mostrar los planes</h3>
-
+    
+    <app-grilla [itemIndex]="0"></app-grilla>
     <p>Acá se muestran los items que traen los planes del external</p>
     <ul>
       <li></li>
