--- a/src/assets/sample.css
+++ b/src/assets/sample.css
@@ -6,6 +6,8 @@
   border-radius: 10px;
   background-color: lightgreen;
   color: black;
+  width: 90em;
+  height: 80em;
 }
 
 .job-ad {
@@ -16,6 +18,8 @@
   border-radius: 10px;
   background-color: lightblue;
   color: black;
+  width: 90em;
+  height: 80em;
 }
 
 .ad-banner-example {
