--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div>
-    <app-catalogo-banner [catalogos]="catalogos" [tiposCatalogos]="tiposCatalogos"></app-catalogo-banner>
+    <app-catalogo-banner [catalogos]="catalogos" [tiposCatalogos]="tiposCatalogos" [catalogoActual]="tiposCatalogos[catalogoActual]"></app-catalogo-banner>
   </div>    
