--- a/src/app/modules/ventas-vistas/catalogo-equipos/vista-catalogo-equipos/equipos.component.html
+++ b/src/app/modules/ventas-vistas/catalogo-equipos/vista-catalogo-equipos/equipos.component.html
@@ -1,16 +1,4 @@
 <div class="hero-profile">
-    <h1>Equipos</h1>
-
-    <h3>La grilla debería mostrar los equipos</h3>
-    <app-grilla [itemIndex]="1"></app-grilla>
-    <p>Acá se muestran los items que traen los equipos</p>
-    <ul>
-      <li></li>
-    </ul>
-
-    <h4>{{data.name}}</h4>
-
-    <p>{{data.bio}}</p>
-
-    <strong>Hire this hero today!</strong>
-  </div>
+  <h1>Equipos</h1>
+  <app-grilla [itemCatalogoIndex]="1" [itemsCatalogo]="data"></app-grilla>
+</div>
