Se ajusta la arquitectura de la generalización

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,6 @@
   <button class="btn m-2" (click)="actualizarCatalogo(1)">
     Equipos
   </button>
-    <app-catalogo-banner [catalogos]="catalogos" [indexCatalogoActual]="catalogoActual"></app-catalogo-banner>
+  
+    <app-catalogo-banner [catalogos]="catalogos" [indexCatalogoActual]="catalogoActual" [catalogoSeleccionado]="catalogoSeleccionado"></app-catalogo-banner>
   </div>    
