--- a/src/app/modules/ventas-vistas/catalogo-equipos/vista-catalogo-equipos/equipos.component.html
+++ b/src/app/modules/ventas-vistas/catalogo-equipos/vista-catalogo-equipos/equipos.component.html
@@ -1,4 +1,5 @@
 <div class="hero-profile">
   <h1>Equipos</h1>
-  <app-grilla [itemCatalogoIndex]="1" [itemsCatalogo]="data"></app-grilla>
+  <h2>Promociones Vigentes</h2>
+  <app-grilla [parametrosCatalogo]="parametrosCatalogo"></app-grilla>
 </div>
