--- a/src/app/modules/ventas-vistas/catalogo-generico/vista-catalogos-banner.component.html
+++ b/src/app/modules/ventas-vistas/catalogo-generico/vista-catalogos-banner.component.html
@@ -1,3 +1,4 @@
 <div class="ad-banner-example">
+    <H1>Catálogo seleccionado: {{catalogoSeleccionado.catalogoName}}</H1>
     <ng-template catalogo-host></ng-template>
   </div>
