--- a/src/app/modules/ventas-vistas/catalogo-planes/vista-catalogo-planes/vista-catalogo-planes.component.html
+++ b/src/app/modules/ventas-vistas/catalogo-planes/vista-catalogo-planes/vista-catalogo-planes.component.html
@@ -1,4 +1,4 @@
 <div class="job-ad">
   <h1>Planes</h1>
-  <app-grilla [itemCatalogoIndex]="0" [itemsCatalogo]="data"></app-grilla>
+  <app-grilla [parametrosCatalogo]="parametrosCatalogo"></app-grilla>
 </div>
