--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,9 @@
   <button class="btn m-2" (click)="actualizarCatalogo(1)">
     Equipos
   </button>
+  <button class="btn m-2" (click)="actualizarCatalogo(2)">
+    Tecnologías
+  </button>
   
     <app-catalogo-banner [catalogos]="catalogos" [indexCatalogoActual]="catalogoActual" [catalogoSeleccionado]="catalogoSeleccionado"></app-catalogo-banner>
   </div>    
