Corrección en la forma de obtener la información, ahora se llama desde el Reducer Dummy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,9 @@
   <button class="btn m-2" (click)="actualizarCatalogo(2)">
     Tecnologías
   </button>
+  <button class="btn m-2" (click)="actualizarCatalogo(3)">
+    Audio
+  </button>
   
-    <app-catalogo-banner [catalogos]="catalogos" [indexCatalogoActual]="catalogoActual" [catalogoSeleccionado]="catalogoSeleccionado"></app-catalogo-banner>
+    <app-catalogo-banner [catalogoSeleccionado]="catalogoSeleccionado"></app-catalogo-banner>
   </div>    
