--- a/src/app/modules/ventas-vistas/catalogo-equipos/vista-catalogo-equipos/catalogo-equipos.component.html
+++ b/src/app/modules/ventas-vistas/catalogo-equipos/vista-catalogo-equipos/catalogo-equipos.component.html
@@ -1,5 +1,5 @@
 <div class="hero-profile">
-  <h1>Tencnologías</h1>
-  <h2>Las mejores tecnologías para pasar la cuarentena</h2>
+  <h1>Equipos</h1>
+  <h2>Promociones Vigentes</h2>
   <app-grilla [listaItems]="listaItems" [visualItemRender]="visualItemRender"></app-grilla>
 </div>
