--- a/src/app/modules/ventas-vistas/catalogo-audio/catalogo-audio.component.html
+++ b/src/app/modules/ventas-vistas/catalogo-audio/catalogo-audio.component.html
@@ -1,9 +1,10 @@
 <div class="hero-profile">
   <h1>Audio</h1>
   <h2> Promociones Audioooo</h2>
+  <p>Lo que quiera poner</p>
   <div>{{parametrosCatalogo.informacionOpcional.promocionesIVA.texto}}
     <img src="{{parametrosCatalogo.informacionOpcional.promocionesIVA.banner}}" alt="Baner {{parametrosCatalogo.informacionOpcional.promocionesIVA.banner}}"/>
   </div>
   
-  <app-grilla [listaItems]="listaItems" [visualItemRender]="visualItemRender"></app-grilla>
+  <app-grilla [listaItems]="listaItems" [visualItemRender]="visualItemRenderTemplate"></app-grilla>
 </div>
