Cambios en el nombramiento de los elementos

--- a/src/app/modules/ventas-vistas/catalogo-tecnologias/catalogo-tecnologias-render.component.html
+++ b/src/app/modules/ventas-vistas/catalogo-tecnologias/catalogo-tecnologias-render.component.html
@@ -1,4 +1,4 @@
-<div class="hero-profile">
+<div class="job-ad">
   <h1>Tencnologías</h1>
   <h2>Las mejores tecnologías para pasar la cuarentena</h2>
   <app-grilla [listaItems]="listaItems" [visualItemRender]="visualItemRender"></app-grilla>
