--- a/src/app/modules/visual-components/catalogo-generico/vista-catalogos-banner.component.html
+++ b/src/app/modules/visual-components/catalogo-generico/vista-catalogos-banner.component.html
@@ -1,4 +1,4 @@
 <div class="ad-banner-example">
-    <H1>Catálogo seleccionado: {{catalogoSeleccionado.catalogoName}}</H1>
+    <H1>Catálogo seleccionado: {{catalogoSeleccionado.nombreTipoCatalogo}}</H1>
     <ng-template catalogo-host></ng-template>
   </div>
