Se cambia el nombre de Grilla a ListaFiltros y se ubica en visual-components/layouts

--- a/src/app/modules/ventas-vistas/catalogo-audio/catalogo-audio-render.component.html
+++ b/src/app/modules/ventas-vistas/catalogo-audio/catalogo-audio-render.component.html
@@ -3,5 +3,5 @@
   <h2> Promociones Audioooo</h2>
   <p>Lo que quiera poner</p>
   
-  <app-grilla [listaItems]="listaItems" [visualItemRender]="visualItemRenderTemplate"></app-grilla>
+  <app-lista-filtros [listaItems]="listaItems" [visualItemRender]="visualItemRenderTemplate"></app-lista-filtros>
 </div>
