--- a/src/app/modules/ventas-vistas/catalogo-equipos/vista-catalogo-equipos/catalogo-equipos-render.component.html
+++ b/src/app/modules/ventas-vistas/catalogo-equipos/vista-catalogo-equipos/catalogo-equipos-render.component.html
@@ -1,5 +1,5 @@
 <div class="hero-profile">
   <h1>Equipos</h1>
   <h2>Promociones Vigentes</h2>
-  <app-grilla [listaItems]="listaItems" [visualItemRender]="visualItemRender"></app-grilla>
+  <app-lista-filtros [listaItems]="listaItems" [visualItemRender]="visualItemRender"></app-lista-filtros>
 </div>
