--- a/src/app/modules/ventas-vistas/catalogo-planes/vista-catalogo-planes/catalogo-planes-render.component.html
+++ b/src/app/modules/ventas-vistas/catalogo-planes/vista-catalogo-planes/catalogo-planes-render.component.html
@@ -1,5 +1,5 @@
 <div class="job-ad">
   <h1>Planes</h1>
   <h1>Voz:</h1>
-  <app-grilla [listaItems]="listaItems" [visualItemRender]="visualItemRender"></app-grilla>
+  <app-lista-filtros [listaItems]="listaItems" [visualItemRender]="visualItemRender"></app-lista-filtros>
 </div>
