--- a/src/app/modules/ventas-vistas/catalogo-tecnologias/catalogo-tecnologias-render.component.html
+++ b/src/app/modules/ventas-vistas/catalogo-tecnologias/catalogo-tecnologias-render.component.html
@@ -1,5 +1,5 @@
 <div class="job-ad">
   <h1>Tencnologías</h1>
   <h2>Las mejores tecnologías para pasar la cuarentena</h2>
-  <app-grilla [listaItems]="listaItems" [visualItemRender]="visualItemRender"></app-grilla>
+  <app-lista-filtros [listaItems]="listaItems" [visualItemRender]="visualItemRender"></app-lista-filtros>
 </div>
