--- a/src/app/modules/ventas-vistas/catalogo-video/catalogo-video-render.component.html
+++ b/src/app/modules/ventas-vistas/catalogo-video/catalogo-video-render.component.html
@@ -1,5 +1,5 @@
 <div class="job-ad">
   <h1>Video</h1>
   <h2>Video</h2>
-  <app-grilla [listaItems]="listaItems" [visualItemRender]="visualItemRender"></app-grilla>
+  <app-lista-filtros [listaItems]="listaItems" [visualItemRender]="visualItemRender"></app-lista-filtros>
 </div>
